--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_favorite" />
+    <string name="title_favorit">Favorit</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_home">Home</string>
 </resources>
